--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog del post</h1>
-    <p>Parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo atractivo para tus paginas web</h1>
+            <p>parrafo para agregar lo que tu quieras, en este caso añadimos cosas raras.</p>
+        </div>
+    </div>
+    
 </body>
 </html>
