--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="header">CABECERA</div>
         <div id="post">
             <h1>Titulo atractivo para tus paginas web</h1>
             <p>parrafo para agregar lo que tu quieras, en este caso añadimos cosas raras.</p>
