--- a/Blogpost.html
+++ b/Blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Titulo atractivo para tus paginas web</h1>
             <p>parrafo para agregar lo que tu quieras, en este caso añadimos cosas raras.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid delectus blanditiis perferendis repudiandae explicabo unde similique veniam voluptatum, nam obcaecati voluptatibus possimus animi a, repellat placeat, ipsum temporibus? Quaerat, totam.</p>
         </div>
     </div>
     
