--- a/Blogpost.html
+++ b/Blogpost.html
@@ -15,6 +15,11 @@
             <p>parrafo para agregar lo que tu quieras, en este caso añadimos cosas raras.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid delectus blanditiis perferendis repudiandae explicabo unde similique veniam voluptatum, nam obcaecati voluptatibus possimus animi a, repellat placeat, ipsum temporibus? Quaerat, totam.</p>
         </div>
+        <div>
+            <footer id="footer">
+                Este es el footer xd
+            </footer>
+        </div>
     </div>
     
 </body>
